[package]
name = "unicoqude"
version = "0.1.1"
authors = ["\"ferhatgec\""]
edition = "2018"
description = "Check is your terminal emulator has unicode support"
keywords = ["term", "unicode", "emulator", "rust", "simple"]
readme = "README.md"
repository = "https://github.com/ferhatgec/unicoqude/"
documentation = "https://docs.rs/unicoqude"
license = "MIT"

include = [
    ".gitignore",
    "src/lib.rs",
    "Cargo.toml",
]

[dependencies]
